add icons fix some styling

--- a/src/pages/mystyles.scss
+++ b/src/pages/mystyles.scss
@@ -16,6 +16,7 @@ html {
 
 body {
     margin: 0;
+	padding-top: 1%;
     min-height: 110%;
 	background: linear-gradient(-45deg, $taste-color-bg, $taste-color-4, $taste-color-3);
 	background-size: 400% 400%;
@@ -32,6 +33,20 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+.left-menu {
+	padding-left: 1rem;
+}
+
+.right-menu {
+	display: flex;
+	justify-content: space-around;
+	flex-flow: row wrap;
+}
+
+.right-icon {
+	padding: 1rem;
 }
 
 .title {
